objects/amc__Purchase_Order_Item__c.object
<CustomObject>
    <description>The Purchase Order Item Custom Object lets you create line items under your Purchase Orders</description>
    <fields>
        <fullName>amc__Amount__c</fullName>
        <formula>amc__Quantity__c *  amc__Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Description__c</fullName>
        <description>Identifies the description of the Purchase Order Item</description>
        <inlineHelpText>Identifies the description of the Purchase Order Item</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Purchase_Order__c</fullName>
        <description>Identifies the Purchase Order this Purchase Order Item relates to</description>
        <inlineHelpText>Identifies the Purchase Order this Purchase Order Item relates to</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>amc__Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Items</relationshipLabel>
        <relationshipName>Purchase_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Quantity__c</fullName>
        <description>Identifies the number of items required on this Purchase Order Item</description>
        <inlineHelpText>Identifies the number of items required on this Purchase Order Item</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Unit_Price__c</fullName>
        <description>Identifies the unit price for the items required on this Purchase Order Item</description>
        <inlineHelpText>Identifies the unit price for the items required on this Purchase Order Item</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase Order Item</label>
    <nameField>
        <displayFormat>POI:{000000}</displayFormat>
        <label>Purchase Order Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>